--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,7 +2,7 @@
     max-width: 1440px;
     display: flex;
     background-color: white;
-    height: 134px;
+    height: 114px;
     width: 100%;
     justify-content: space-between;
     padding: 0 20px;
@@ -49,4 +49,27 @@ a{
 a:hover{
     transform: scale(1.05);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+@media (max-width: 1200px) {
+    .font{
+        font-size: 20px;
+    }
+}
+@media (max-width: 750px) {
+    .font{
+        font-size: 16px;
+    }
+}
+@media (max-width: 550px) {
+    .font{
+        font-size: 12px;
+    }
+    .navbar{
+        padding: 0 5px;
+    }
+}
+@media (max-width: 370px) {
+    .font{
+        font-size: 10px;
+    }
 }
