--- a/src/css/MainContent.css
+++ b/src/css/MainContent.css
@@ -1,7 +1,7 @@
 .ContainerMainContent {
     width: 100%;
     height: 100%;
-    max-height: calc(100dvh - 194px);
+    max-height: calc(100dvh - 174px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,9 +11,9 @@
 
 .backgroundImage {
     width: 100%;
-    height: calc(100dvh - 194px);
+    height: calc(100dvh - 174px);
     max-height: 1000px;
-    background-image: url('../../public/Icons/TEST.webp');
+    background-image: url('../../public/Icons/KuchniaStronaGłowna.webp');
     background-size: cover;
     background-position: center;
     align-self: self-start;
@@ -33,7 +33,7 @@
     height: 80px;
     margin-top: 10px;
     border-radius: 50px;
-    background-color: #324DD4;
+    background-color: #740707;
     color: white;
     border: none;
     cursor: pointer;
@@ -41,12 +41,14 @@
 }
 
 .contactButton:hover {
-    background-color: #324DD4;
     transform: scale(1.05);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 button a {
+    color: white;
+}
+button a:hover {
     color: white;
 }
 
