--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,7 +2,7 @@
     max-width: 1440px;
     display: flex;
     background-color: white;
-    height: 114px;
+    height: 94px;
     width: 100%;
     justify-content: space-between;
     padding: 0 20px;
@@ -23,7 +23,7 @@
     color: black
 }
 .current{
-    color: #324DD4;
+    color: #740707;
     position: relative;
     transition: color 0.3s ease;
 }
@@ -52,7 +52,7 @@
     right: 0; 
     width: 30px;
     height: 2px;
-    background-color: #324DD4;
+    background-color: #740707;
 }
 
 .current::after {
@@ -62,7 +62,7 @@
     left: 0; 
     width: 30px;
     height: 2px;
-    background-color: #324DD4;
+    background-color: #740707;
 }
 a{
     text-decoration: none;
@@ -72,7 +72,7 @@ a{
 a:hover{
     transform: scale(1.05);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    color: #324DD4;
+    color: #740707;
 }
 
 @media (max-width: 1200px) {
