--- a/src/css/oferta.css
+++ b/src/css/oferta.css
@@ -5,91 +5,80 @@
     justify-content: space-around;
     margin-top: 15px;
 }
-
-.oferta-karta {
-    border: 1px solid #242020;
-    width: 300px;
-    height: 400px;
-}
-
-.oferta-karta:hover {
-    scale: 1.05;
-    transition: 0.3s;
-}
-
-.oferta-zdjęcie {
-    width: 300px;
-    height: 200px;
-}
-
-.oferta-zdjęcie img {
-    width: 300px;
-    height: 200px;
-}
-
-.oferta-text {
-    font-family: 'Aldrich', sans-serif;
-    width: 300px;
+.oferta-karta{
+    justify-content: center;
+    gap: 20px;
+    display: flex;
     height: auto;
-    background-color: white;
-    box-sizing: border-box;
+    width: 95%;
+    max-width: 1000px;
 }
-
-.oferta-header {
-    margin-top: 10%;
-    padding: 10px;
-    box-sizing: border-box;
-    font-size: 24px;
-    color: #242020;
+.oferta-photo{
+    height: auto;
+    width: 45%;
 }
-
-.oferta-content {
-    margin-top: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-    font-size: 16px;
-    color: #242020;
-}
-
-.oferta-szczegóły {
-    max-width: 500px;
+.oferta-text{
+    background-color: rgb(247, 247, 247);
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: auto;
+    width: 45%;
     padding: 10px;
     box-sizing: border-box;
 }
-
-.oferta-header-details {
-    margin-left: 20px;
-    font-size: 24px;
-    color: #242020;
+.kreska{
+    margin-top: 120px;
+}
+.ImgOferta{
+    width: 100%;
+}
+.CardStyle{
+    width: 300px;
+    height: 300px;
+    background-color: rgb(247, 247, 247);
+    border: 1px solid #ccc;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding:5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.ImgDziałanie{
+    margin-top: 30px;
+    width: 60px;
+    height: auto;
+}
+.fontOferta {
+    font-size: 18px;
+    color: black
+}
+.Bold{
     font-weight: bold;
 }
-.oferta-text-details{
-    padding: 10px;
-    box-sizing: border-box;
+.kartyDisplay{
+    display: flex;
 }
-.oferta-szczegóły button {
-    cursor: pointer;
-    background: none;
-    border: none;
-    padding: 0;
-    font: inherit;
-    color: inherit;
-    outline: none;
+@media (max-width: 580px) {
+    .kartyDisplay{
+        justify-items: center;
+        display: block; 
+    }
+    .CardStyle{
+        margin-top: 20px;
+    }
 }
-.oferta-szczegóły img {
-   width: 30px;
-   height: 30px;
-}
-.oferta-szczegóły button:hover {
-    scale: 1.1;
-    transition: 0.3s;
-}
-@media (max-width:700px) {
-    .oferta-kontener{
+@media (max-width: 700px) {
+    .oferta-kontener {
         display: block;
-        place-items: center;
     }
     .oferta-karta{
-        margin-bottom: 20px;
+        justify-items: center;
+        display: block;
+    }
+    .oferta-photo{
+        width: 80%;
+    }
+    .oferta-text{
+        width: 80%;
     }
 }
